crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__ruff_exemption_codes_leading_hashes.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: exemption
---
Ok(
    Some(
        Codes(
            Codes {
                range: 3..27,
                codes: [
                    Code {
                        code: "F401",
                        range: 17..21,
                    },
                    Code {
                        code: "F841",
                        range: 23..27,
                    },
                ],
            },
        ),
    ),
)
