crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__ruff_exemption_empty_comma.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: exemption
---
Ok(
    Some(
        NoqaLexerOutput {
            warnings: [
                MissingItem(
                    19..19,
                ),
            ],
            directive: Codes(
                Codes {
                    range: 0..24,
                    codes: [
                        Code {
                            code: "F401",
                            range: 14..18,
                        },
                        Code {
                            code: "F841",
                            range: 20..24,
                        },
                    ],
                },
            ),
        },
    ),
)
