crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__ruff_exemption_empty_comma_space.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: exemption
---
Ok(
    Some(
        Codes(
            Codes {
                range: 0..25,
                codes: [
                    Code {
                        code: "F401",
                        range: 14..18,
                    },
                    Code {
                        code: "F841",
                        range: 21..25,
                    },
                ],
            },
        ),
    ),
)
