crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__ruff_exemption_invalid_code_suffix.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "ParsedFileExemption::try_extract(TextRange::up_to(source.text_len()), source,)"
---
Ok(
    Some(
        Codes(
            Codes {
                range: 0..21,
                codes: [
                    Code {
                        code: "F401abc",
                        range: 14..21,
                    },
                ],
            },
        ),
    ),
)
