crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__ruff_exemption_names.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "ParsedFileExemption::try_extract(source)"
---
Ok(
    Some(
        Codes(
            [
                Name(
                    "unused-import",
                ),
                Name(
                    "unused-variable",
                ),
            ],
        ),
    ),
)
