crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__ruff_exemption_squashed_codes.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: exemption
---
Ok(
    Some(
        NoqaLexerOutput {
            warnings: [
                MissingDelimiter(
                    18..18,
                ),
            ],
            directive: Codes(
                Codes {
                    range: 0..22,
                    codes: [
                        Code {
                            code: "F401",
                            range: 14..18,
                        },
                        Code {
                            code: "F841",
                            range: 18..22,
                        },
                    ],
                },
            ),
        },
    ),
)
