crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__ruff_malformed_code_2.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: directive
---
Ok(
    Some(
        NoqaLexerOutput {
            warnings: [],
            directive: Codes(
                Codes {
                    range: 0..20,
                    codes: [
                        Code {
                            code: "RUF001",
                            range: 14..20,
                        },
                    ],
                },
            ),
        },
    ),
)
